# volumetric_vid

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
ComputeNormals/: ComputeNormals.cpp
MLS/: CMakeLists.txt  MLS.cpp
SPSR/: CMakeLists.txt  SPSR.cpp  SPSR.h  main.cpp
Texturing/: CMakeLists.txt  blend2d_test.cpp  custom_texture_mapping.cpp  texture_mapping.cpp  texturing.cpp  texturing.h
UVmap/: CMakeLists.txt  UVmap.cpp  UVmap_pcl.cpp
Utilities/: example_texture_mesh.cpp
Visualizer/: CMakeLists.txt  Visualizer.cpp  pcl_visualizer_demo.cpp
apps/: CMakeLists.txt  volcap.cpp
demo_data/: calibration_171026_pose3.json
demo_data/kinoptic_ptclouds/: ptcloud_hd00000380.ply  ptcloud_hd00000381.ply  ptcloud_hd00000382.ply  ptcloud_hd00000383.ply  ptcloud_hd00000384.ply  ptcloud_hd00000385.ply  ptcloud_hd00000386.ply  ptcloud_hd00000387.ply  ptcloud_hd00000388.ply  ptcloud_hd00000389.ply  ptcloud_hd00000390.ply  ptcloud_hd00000391.ply  ptcloud_hd00000392.ply  ptcloud_hd00000393.ply  ptcloud_hd00000394.ply  ptcloud_hd00000395.ply  ptcloud_hd00000396.ply  ptcloud_hd00000397.ply  ptcloud_hd00000398.ply  ptcloud_hd00000399.ply  ptcloud_hd00000400.ply
demos/: CMakeLists.txt  README.md  demo_blend2d.cpp  demo_fbx.cpp  demo_mls.cpp  demo_spsr.cpp  demo_texturing.cpp  demo_usd.cpp  demo_usd_billboard.cpp  demo_usd_crate.cpp  demo_uv_map.cpp  demo_uvatlas_cube.cpp  demo_vcl_data.cpp  demo_visualizer.cpp
demos/old_demos/: fbx_first_program.cpp
docs/: build_Boost1.68.0.md  build_Eigen3.3.5.md  build_FLANN1.9.1.md  build_PCL1.9.1.md  build_QHull2015.2.md  build_VTK8.1.2.md  demo_data.md
docs/doxygen/: Doxyfile
fbx/: CMakeLists.txt  create_crate_fbx.cpp  create_volcap_fbx.cpp
scripts/: dir_usda_to_usdz.sh  multiview-player_each-cam.bat
src/: CMakeLists.txt
src/volcap/ComputeNormals/: CMakeLists.txt
src/volcap/SPSR/: SPSR.h
src/volcap/Texturing/: texture_mapping.cpp  texturing.h
src/volcap/Utilities/: write_uv_jpeg.cpp
src/volcap/io/: io.cpp  io.h  io.hpp  io_cam.cpp  io_cam.h  io_fbx.cpp  io_fbx.h  io_usd.cpp  io_usd.h
src/volcap/io/fbx/: create_volcap_fbx.cpp
src/volcap/surface/: spsr.cpp  spsr.h  spsr.hpp
src/volcap/surface/SPSR/: SPSR.cpp  main.cpp
src/volcap/texture/: texturing.cpp  texturing.h  uv_map.cpp  uv_map.h
src/volcap/texture/Texturing/: CMakeLists.txt  custom_texture_mapping.cpp  texturing.cpp
src/volcap/texture/UVmap/: UVmap_pcl.cpp
src/volcap/utils/ComputeNormals/: ComputeNormals.cpp  ComputeNormals.h
src/volcap/utils/Utilities/: CMakeLists.txt
src/volcap/viz/: Visualizer.cpp  viz.cpp  viz.h  viz.hpp
